refactor(dry): extract OwnerOnlyFiles for the credential stores' 0600 writes
TokenStore (forge) and RepoCredentialStore (repo) each hand-rolled the identical
'create dir 0700, write file, chmod 0600' dance plus a byte-identical trySetOwnerOnly.
Extracted core/util OwnerOnlyFiles.write(dir, file, content) + setOwnerOnly(path, perms)
— one home for the secret-file permission policy — and routed both stores through it.
Each store keeps its own sanitize() (they differ: forge allows [.-], repo allows [.-_]).

Verified: classes+testClasses green; TokenStore/RepoCredentialStore/ForgeAuth tests pass.